test/error/namecall1.luau
local s

print(s:world())